# nnpp-mg-implant-corrosion-3d

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
data/: NNPP.bunnyNodes  NNPP.data1  NNPP.data2  NNPP.datac1  NNPP.datac10  NNPP.datac11  NNPP.datac2  NNPP.datac3  NNPP.datac4  NNPP.datac5  NNPP.datac6  NNPP.datac7  NNPP.datac8  NNPP.datac9  NNPP.nodes
src/: main.cpp
src/helpers/: grid.h  kd_tree_interface.h  space.h  utils.h
